Fixed small details on small screens.

--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -2,12 +2,14 @@
 	
 	p {
 		line-height: 1.65;
-		font-size: 1.125rem;
 		margin: 1.8rem 0;	
+	}
+
+	@mixin atSmall {
+		font-size: 1.125rem;
 	}
 
 	p a {
 		font-weight: 700;
-		color:$mainOrange;
 	}
 }
